[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arg-itertools"
dynamic = ["version"]
description = "Iteration tools for iterables but to pick indices instead of elements."
authors = [
  { name="Ruan Dias", email="rdmail.coder@gmail.com"},
]

requires-python = ">= 3.10.11"
dependencies = []
readme = "README.md"
keywords = ["itertools", "iterable", "iterator", "indices", "index", "elements", "sequence", "list", "tuple", "deque", "queue"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License"
]

[project.urls]
Repository = "https://github.com/rd-coder/arg-itertools.git"

[tool.hatch.build.targets.sdist]
exclude = ["/.github"]

[tool.hatch.build.targets.wheel]
packages = ["src/python/rdcoder"]
only-packages = true

[tool.hatch.version]
path = "__init__.py"